bpo-33985: Implement ContextVar.name attribute. (GH-7980)